# mulac

./: AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  opencode.json
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.codex/: config.toml
.gemini/: config.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test-app-todo.yml
.openclaw/: config.json5
commanding/: Cargo.toml
commanding/src/: command_consumer.rs  dispatcher.rs  gateway.rs  lib.rs  record_commands.rs  stale_command_sweep.rs
commanding/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
docs/: actions.md  architecture-spec.md  codestyle.md  command-handling-spec.md  commanding-implementation-plan.md  commit-1a48e85-small-checklist.md  components.md  contracts.md  developer-guidelines.md  eventing-implementation-plan.md  eventing-spec.md  implementation-guide.md  inbox-spec.md  outbox-implementation-checklist.md  outbox-implementation-plan.md  outbox-spec.md  outbox_entries.sql  pluggable-db-backends.md  repo-tldr.md  review_test_app_todo_claude.md  review_test_app_todo_codex.md  review_test_app_twitter_claude.md  review_test_app_twitter_codex.md  suggestion-driven-documentation.md  test_app_todo.md  test_app_twitter.md  todo-sqlx-to-diesel-migration-plan.md  twitter-app-reorganize-plan-final.md
docs/.templates/: commit-review.md  component-high-level-view.md
docs/adr/: 001-hexagonal-architecture.md  002-status-code-gaps.md  003-uuid-v7-identifiers.md  004-skip-locked-reservation.md  005-jsonb-metadata.md  006-cargo-feature-flags.md  007-use-case-split-repositories.md  008-arc-dyn-trait-dependencies.md  README.md
docs/proposals/: architecture-spec-proposal-v1.md  architecture-spec-proposal-v2.md  components-proposal-v1.md  contracts-proposal-v1.md  contracts-proposal-v2.md  contracts-proposal-v3.md
docs/suggestions/architecture-spec/: S001_component-names-inconsistent-with-components-doc_claude-sonnet-4-6-high.md  S006_happy-path-scope-is-implicit_codex-gpt-5-medium.md  (+4 more)
eventing/: Cargo.toml
eventing/src/: lib.rs  record_events.rs  stale_event_sweep.rs
inbox/: Cargo.toml  SPEC.md
inbox/src/: amqp_consumption.rs  inbox_consumer.rs  io.rs  lib.rs  record_messages.rs  stale_reservation_sweep.rs
inbox/src/amqp/: client.rs  mod.rs  worker.rs
inbox/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
inbox/src/inbox/: consumer.rs  io.rs  mod.rs  publisher.rs  storage.rs
kernel/: Cargo.toml  SPEC.md
kernel/src/: command_handler_registry.rs  event_subscriber_registry.rs  lib.rs  workers.rs
kernel_derive/: Cargo.toml
kernel_derive/src/: lib.rs
libs/: Cargo.toml
libs/commanding/: Cargo.toml
libs/commanding/src/: command_consumer.rs  dispatcher.rs  gateway.rs  lib.rs  record_commands.rs  stale_command_sweep.rs
libs/commanding/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
libs/eventing/: Cargo.toml
libs/eventing/src/: dispatcher.rs  event_consumer.rs  gateway.rs  lib.rs  model.rs  record_events.rs  stale_event_sweep.rs
libs/eventing/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
libs/inbox/: Cargo.toml
libs/inbox/src/: amqp_consumption.rs  inbox_consumer.rs  lib.rs  record_messages.rs  stale_reservation_sweep.rs
libs/inbox/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
libs/mulac_diesel/: Cargo.toml
libs/outbox/: Cargo.toml
libs/outbox/src/: amqp_publisher.rs  lib.rs  model.rs  outbox_consumer.rs  record_events.rs  stale_reservation_sweep.rs
libs/outbox/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
libs/outbox/tests/: diesel_storage.rs  io_smoke.rs  lifecycle.rs
mulac_diesel/: Cargo.toml
mulac_diesel/src/: lib.rs
outbox/: Cargo.toml  SPEC.md
outbox/src/: amqp_publisher.rs  lib.rs  outbox_consumer.rs  outbox_publisher.rs  outbox_storage.rs  record_events.rs
outbox/src/assembly/: application.rs  infra_diesel.rs
outbox/tests/: diesel_storage.rs  io_smoke.rs  lifecycle.rs
test_app/: Cargo.toml
test_app/src/: lib.rs
test_apps/: Makefile  docker-compose.yml  init.sql
test_apps/todo/: .env  .env.example  AGENTS.md  Cargo.toml  Makefile  docker-compose.yml  feature-organization-migration-plan.md  feature-organization.md  rustfmt.toml
test_apps/todo/migrations/: 0003_extra_info.sql
test_apps/todo/migrations/2025-01-01-000001_init/: down.sql  up.sql
test_apps/todo/migrations/2025-01-01-000002_write_side/: down.sql  up.sql
test_apps/todo/migrations/2026-05-27-000001_extra_info/: down.sql
test_apps/todo/skills/rust-import-hygiene/: SKILL.md
test_apps/todo/src/: lib.rs  schema.rs  task_complete.rs  task_create.rs  task_delete.rs  task_get.rs  task_list.rs  task_reopen.rs  task_schedule_due_dates.rs  task_update.rs
test_apps/todo/src/assembly/: application.rs  domain.rs  infra_diesel.rs  infra_sqlx_pg.rs  mod.rs
test_apps/todo/tests/: inbox.rs  todo_complete.rs  todo_create.rs  todo_delete.rs  todo_due_date.rs  todo_get.rs  todo_list.rs  todo_reopen.rs  todo_update.rs  utils.rs
test_apps/twitter/: .env  AGENTS.md  Cargo.toml  Makefile  docker-compose.yml  temp.md  temp2.md
test_apps/twitter/migrations/2025-01-01-000001_infrastructure/: down.sql  up.sql
test_apps/twitter/migrations/2025-01-01-000002_app_tables/: down.sql  up.sql
test_apps/twitter/migrations/2026-05-23-000001_app_messages/: down.sql  up.sql
test_apps/twitter/migrations/2026-05-27-000001_entry_extra_info/: down.sql  up.sql
test_apps/twitter/src/: db.rs  direct_message_send.rs  inbox.rs  lib.rs  outbox.rs  schema.rs  timeline_fan_out.rs  tweet_delete.rs  tweet_like.rs  tweet_post.rs  tweet_retweet.rs  tweet_unlike.rs  user_follow.rs  user_unfollow.rs
test_apps/twitter/src/assembly/: application.rs  domain.rs  infra_diesel.rs  mod.rs
test_apps/twitter/tests/: direct_message_send.rs  inbox.rs  outbox.rs  timeline_fan_out.rs  tweet_delete.rs  tweet_like.rs  tweet_post.rs  tweet_retweet.rs  tweet_unlike.rs  user_follow.rs  user_unfollow.rs  utils.rs
write_side/: Cargo.toml  SPEC.md
write_side/src/: lib.rs
(+42 files in other folders)
