[package]
name = "commanding"
version = "0.1.0"
edition = "2024"

[features]
default = ["diesel"]
diesel = ["dep:diesel"]

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"], optional = true }
eventing = { path = "../eventing" }
