[package]
name = "inbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["diesel"]
diesel = ["dep:diesel", "dep:mulac_diesel"]
amqp = ["diesel", "dep:lapin", "dep:futures-lite", "dep:tokio", "dep:tokio-util"]

[dependencies]
commanding = { path = "../commanding" }
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"], optional = true }
mulac_diesel = { path = "../mulac_diesel", optional = true }
lapin        = { version = "4.5.0", optional = true }
tokio        = { version = "1", features = ["macros", "time"], optional = true }
tokio-util   = { version = "0.7", features = ["rt"], optional = true }
futures-lite = { version = "2", optional = true }
