[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
inbox = { path = "../libs/inbox", default-features = false }
commanding = { path = "../libs/commanding", default-features = false }
eventing = { path = "../libs/eventing", default-features = false }
outbox = { path = "../libs/outbox", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-util = "0.7"
