[package]
name = "mulac-kernel"
version = "0.3.0"
edition = "2024"

[features]
default = []

[dependencies]
inbox = { path = "../libs/inbox", version = "0.3.0", registry = "margo", default-features = false, features = ["diesel"], package = "mulac-inbox" }
commanding = { path = "../libs/commanding", version = "0.3.0", registry = "margo", default-features = false, package = "mulac-commanding" }
eventing = { path = "../libs/eventing", version = "0.3.0", registry = "margo", default-features = false, package = "mulac-eventing" }
outbox = { path = "../libs/outbox", version = "0.3.0", registry = "margo", default-features = false, package = "mulac-outbox" }
mulac_diesel = { path = "../libs/mulac_diesel", version = "0.3.0", registry = "margo", default-features = false }
kernel_derive = { path = "../kernel_derive", package = "mulac-kernel-derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
