[workspace]
resolver = "3"
members = [
    "inbox",
    "outbox",
    "commanding",
    "eventing",
    "mulac_diesel",
]

[workspace.package]
edition = "2024"
version = "0.2.0"

[workspace.dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
mulac_diesel = { path = "./mulac_diesel", version = "0.2.0", registry = "margo" }
tokio = { version = "1" }
tokio-util = { version = "0.7" }
lapin = { version = "4.5.0" }
futures-lite = { version = "2" }
