[package]
name = "outbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["diesel"]
diesel = ["dep:diesel"]
amqp = ["dep:lapin", "dep:tokio"]

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"], optional = true }
lapin = { version = "4.5.0", optional = true }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }
