[package]
name = "mulac-commanding"
version.workspace = true
edition.workspace = true

[features]
default = ["diesel"]
diesel = ["dep:diesel", "dep:mulac_diesel"]

[dependencies]
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { workspace = true, optional = true }
mulac_diesel = { workspace = true, optional = true }
eventing = { path = "../eventing", package = "mulac-eventing" }
