[package]
name = "mulac-inbox"
version.workspace = true
edition.workspace = true

[features]
default = ["diesel"]
diesel = ["dep:diesel", "dep:mulac_diesel"]
amqp = ["diesel", "dep:lapin", "dep:futures-lite", "dep:tokio", "dep:tokio-util"]

[dependencies]
commanding = { path = "../commanding", version = "0.2.0", registry = "margo", package = "mulac-commanding" }
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { workspace = true, optional = true }
mulac_diesel = { workspace = true, optional = true }
lapin = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "time"], optional = true }
tokio-util = { workspace = true, features = ["rt"], optional = true }
futures-lite = { workspace = true, optional = true }
