[package]
name = "outbox"
version.workspace = true
edition.workspace = true

[features]
default = ["diesel"]
diesel = ["dep:diesel", "dep:mulac_diesel"]
amqp = ["dep:lapin", "dep:tokio"]

[dependencies]
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
diesel = { workspace = true, optional = true }
mulac_diesel = { workspace = true, optional = true }
lapin = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"], optional = true }
