[package]
name = "test_app_todo"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros", "derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
kernel = { path = "../../kernel", package = "mulac-kernel" }

[[bin]]
name = "test_app_todo"
path = "src/assembly/bin/todoapp.rs"

[dev-dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
