[package]
name = "test_app_twitter"
version = "0.1.0"
edition = "2024"

[lib]
name = "test_app_twitter"
path = "src/lib.rs"

[[bin]]
name = "test_app_twitter"
path = "src/assembly/bin/twitterapp.rs"

[dependencies]
kernel = { path = "../../kernel", package = "mulac-kernel" }
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
serde_json = "1"
